--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: ruby
 rvm:
   - 1.9.3
-before_install: sudo apt-get install vim-gtk
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y vim-gtk
+  - gem install bundler -v '~> 1.11'
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
